<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RangeBar Sample</string>
    <string name="action_settings">Settings</string>
    <string name="title">RangeBar</string>
    <string name="tickCount">tickCount = 7</string>
    <string name="tickHeight">tickHeight = 24</string>
    <string name="barWeight">barWeight = 2</string>
    <string name="barColor">barColor = #CCCCCC</string>
    <string name="connectingLineWeight">connectingLineWeight = 4</string>
    <string name="connectingLineColor">connectingLineColor = #33B5E5</string>
    <string name="thumbRadius">thumbRadius = N/A</string>
    <string name="thumbColorNormal">thumbColorNormal = N/A</string>
    <string name="thumbColorPressed">thumbColorPressed = N/A</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="leftIndexValue">0</string>
    <string name="leftIndex">leftIndex</string>
    <string name="rightIndexValue">6</string>
    <string name="rightIndex">rightIndex</string>
    <string name="refresh">Refresh Indices</string>
    <string name="refresh_minmax">REFRESH MIN/MAX</string>
    <string name="maxLabel">Max</string>
    <string name="minLabel">Min</string>

</resources>