<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/mylayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="40sp" />

        <com.chili.slider.Slider
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            custom:minValue="100"
            custom:maxValue="300"
            custom:indicatorRadius="2.5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/leftIndex"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/leftIndex" />

                    <EditText
                        android:id="@+id/leftIndexValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/leftIndexValue"
                        android:textSize="35sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/rightIndex"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/rightIndex" />

                    <EditText
                        android:id="@+id/rightIndexValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/rightIndexValue"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/refresh"
                style="@style/RoboTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/refresh"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/min"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/minLabel" />

                    <EditText
                        android:id="@+id/minValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="0"
                        android:textSize="35sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/max"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/maxLabel" />

                    <EditText
                        android:id="@+id/maxValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="0"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/refreshMinMax"
                style="@style/RoboTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/refresh_minmax"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>